# neo-sophia

./: .gitignore  LICENSE  README.md  config.yaml  config_example.json  env.yml  openai_api_key_example.txt  pyproject.toml  requirements.txt  setup.py  test.sh
data/: bank_customers.csv  bank_database.db  basis_template.txt  prompt_instructions.txt  prompt_instructions2.txt  sec_10q_sections.json  synthbank.db  transactions.db
data/fia/docs/: appendix_l_iii_2023_publie_le_20_juin_2023.yaml  (+8 more)
data/game1/: competition.db  customer_feedback.db  employee_database.db  expense_database.csv  expense_database.db
data/sim1/: Company_B_competition.db  Company_B_finance.db  Techtonic_Tech_competition.db  Techtonic_Tech_finance.db
examples/: agent_example.py  agent_gradio_example.py  bank_agent.py  bank_agent_eval.py  bank_agent_eval_fix.py  bank_agent_llama.py  bank_agent_two.py  chat_dispatch.py  chromadb_example.py  fia_reg_search.py  generate_10q_basis.py  interface.py  llamaindex.py  pdf_chat.py  project.py  run_dispatch.py  simplesearch.py  sleuth.py  sleuth2.py  sqlite_chat.py  sqlite_eval.py  test_bank_agent_eval.py  test_project.py
examples/fia/: data.py  reg_search.py  utils.py
neosophia/llmtools/: openaiapi.py
sandbox/: agent.py  bank_agent.py
scripts/: download_and_extract_msrb.py  download_title_12.py  extract_pdf.py  extract_text.py
src/: pdf_utils.py
src/neosophia/: simplelocal.py  test_text_utils.py  text_utils.py  utils.py
synthbank/: bank_globals.py  components.py  constructors.py  synthbank.py
synthbank/census_names_1990/: datapackage.json
(+61 files in other folders)
